@@ -398,6 +398,10 @@ h2.title.comments-header, h2.title.comment-form {
 	float: right; /* LTR */
 	padding: 0 0 .5em .5em; /* LTR */
 }
+.node-unpublished,
+.comment-unpublished {
+	background-color: #fdd !important;
+}
 .signature p {
 	font-size: 85%;
 	margin: 7px 0;
