@@ -4,8 +4,8 @@
 
 <head profile="<?php print $grddl_profile ?>">
 <title><?php print $head_title ?></title>
-<meta name="ver" content="7.x-1.3"/>
-<meta http-equiv="X-UA-Compatible" content="IE=8" />
+<meta name="ver" content="zp7-H2"/>
+<meta http-equiv="X-UA-Compatible" content="edge" />
 <?php print $head ?>
 <?php print $styles ?>
 <?php print $scripts ?>
