@@ -46,9 +46,9 @@ settings[search_info_upload] = 1
 scripts[] = /js/jquery.hoverIntent.minified.js
 scripts[] = /js/dropdown.js
 
-; Information added by drupal.org packaging script on 2012-09-22
-version = "7.x-1.3"
+; Information added by drupal.org packaging script on 2012-11-28
+version = "7.x-1.4"
 core = "7.x"
 project = "zeropoint"
-datestamp = "1348313850"
+datestamp = "1354139688"
 
